# reprobuild

./: .gitignore  CMakeLists.txt  EXPERIMENTS.md  Makefile  README.md  build_graph.yaml  build_record.yaml  build_record_rpm.yaml  reprobuild
include/: bpftrace_script.h  build_graph.h  build_info.h  build_record.h  bundle.h  canonicalizer.h  dependency_package.h  interceptor_embedded.h  logger.h  postprocessor.h  preprocessor.h  thread_pool.h  tracker.h  uploader.h  utils.h
src/: build_graph.cpp  build_info.cpp  build_record.cpp  bundle.cpp  canonicalizer.cpp  dependency_package.cpp  dependency_resolver.cpp  dependency_resolver.h  interceptor.cpp  logger.cpp  main.cpp  postprocessor.cpp  preprocessor.cpp  thread_pool.cpp  tracker.cpp  uploader.cpp  utils.cpp
tests/: test_build_graph.cpp  test_build_record.cpp  test_canonicalizer.cpp  test_dependency_package.cpp  test_tracker.cpp
tests/git-test/: Makefile  build_record.yaml  git_log
tools/: bootstrap_and_run_experiment.sh  generate_embedded_lib.py  reprobuild_eval_runner.py  run_container_repro_experiment.sh  script.bt  setup_experiment_env.sh  start-minio.sh  visualize_graph.py
